--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,5 @@
 body {
-	background: url("http://animal-backgrounds.com/files/Black%20Cat/desktop-black-cat-wallpaper.jpg");
+	background: black;
 	/*cursor:url(dist/nat924.cur),auto; */
 }
 
