--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,5 @@
 body {
-	background: url("http://www.washingtonpost.com/wp-srv/special/lifestyle/the-age-of-obama/img/obama-v2/obama09.jpg");
+	background: url("http://animal-backgrounds.com/files/Black%20Cat/desktop-black-cat-wallpaper.jpg");
 	/*cursor:url(dist/nat924.cur),auto; */
 }
 
