--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,5 @@
 body {
-	background: url("desktop-black-cat-wallpaper.jpg");
+	background: url("../desktop-black-cat-wallpaper.jpg");
 	/*cursor:url(dist/nat924.cur),auto; */
 }
 
