more login button

--- a/scripts/style.css
+++ b/scripts/style.css
@@ -137,7 +137,7 @@ button:before {
 }
 #facebook-login{
   background: gray;
-  border: solid red 20px;
+  border: solid pink 20px;
   padding: 20px;
   font-size: 25px;
 }
