--- a/scripts/style.css
+++ b/scripts/style.css
@@ -10,7 +10,7 @@ body {
 	color: black;
 	display: inline-block;
 	padding: 4px;
-	 box-shadow: 10px 10px 5px pink;
+	 box-shadow: 10px 10px 10px 10px pink;
 	font-size: 20px;
 	font-style: bold;
 
@@ -137,7 +137,7 @@ button:before {
 }
 #facebook-login{
   background: gray;
-   box-shadow: 30px 30px 15px pink;
+   box-shadow: 30px 30px 30px 30px pink;
   padding: 20px;
   font-size: 25px;
   border-radius: 45px;
