--- a/scripts/style.css
+++ b/scripts/style.css
@@ -147,3 +147,10 @@ box-shadow: 10px 10px 128px 41px rgba(235,155,235,1);
   border-radius: 45px;
   margin: 25px;
 }
+
+.keith{
+  background: gray;
+  border-radius: 10px;
+  padding: 25px;
+  margin: 25px;
+}
