--- a/scripts/style.css
+++ b/scripts/style.css
@@ -22,9 +22,9 @@ box-shadow: 10px 10px 128px 41px rgba(235,155,235,1);
 #watchlist {
 	width: 500px;
   background: black;
-
+height: 500px;
  
-    overflow: hidden;
+    overflow: scroll;
     float:left;
 }
 
