--- a/scripts/style.css
+++ b/scripts/style.css
@@ -153,4 +153,5 @@ box-shadow: 10px 10px 128px 41px rgba(235,155,235,1);
   border-radius: 10px;
   padding: 25px;
   margin: 25px;
+  width: 100px;
 }
