--- a/scripts/style.css
+++ b/scripts/style.css
@@ -149,7 +149,7 @@ box-shadow: 10px 10px 128px 41px rgba(235,155,235,1);
 }
 
 .keith{
-  background: gray;
+  background: orange;
   border-radius: 10px;
   padding: 25px;
   margin: 25px;
