--- a/scripts/style.css
+++ b/scripts/style.css
@@ -155,3 +155,8 @@ box-shadow: 10px 10px 128px 41px rgba(235,155,235,1);
   margin: 25px;
   width: 100px;
 }
+
+#phaser-example{
+  margin-left: auto;
+  margin-right: auto;
+}
