--- a/scripts/style.css
+++ b/scripts/style.css
@@ -149,11 +149,16 @@ box-shadow: 10px 10px 128px 41px rgba(235,155,235,1);
 }
 
 .keith{
-  background: orange;
+  background: black;
   border-radius: 10px;
   padding: 25px;
   margin: 25px;
   width: 100px;
+   -webkit-box-shadow: 10px 10px 128px 41px rgba(235,155,235,1);
+-moz-box-shadow: 10px 10px 128px 41px rgba(235,155,235,1);
+box-shadow: 10px 10px 128px 41px rgba(235,155,235,1);
+display: inline-block;
+text-align: center;
 }
 
 #phaser-example{
