--- a/scripts/style.css
+++ b/scripts/style.css
@@ -160,7 +160,9 @@ box-shadow: 10px 10px 128px 41px rgba(235,155,235,1);
 display: inline-block;
 text-align: center;
 }
-
+.keith > h1{
+  font-size: 20px;
+}
 #phaser-example{
   margin-left: auto;
   margin-right: auto;
