--- a/scripts/style.css
+++ b/scripts/style.css
@@ -57,6 +57,7 @@ h1 {
 	letter-spacing: 5px;
 	font: 50px 'MisoRegular';
   font-size: 35px;
+  line-height: 50%;
 }
 
 img {
@@ -154,7 +155,7 @@ box-shadow: 10px 10px 128px 41px rgba(235,155,235,1);
 .keith{
   background: black;
   border-radius: 10px;
-  padding: 25px;
+  padding: 5px;
   margin: 25px;
   width: 100px;
    -webkit-box-shadow: 10px 10px 128px 41px rgba(235,155,235,1);
