graves img margin

--- a/scripts/style.css
+++ b/scripts/style.css
@@ -150,6 +150,8 @@ button:before {
 	background: green;
   height: 2px;
   width: 2px;
+  margin: 0px;
+  padding: 0px;
 }
 #facebook-login{
   background: gray;
