--- a/scripts/style.css
+++ b/scripts/style.css
@@ -6,7 +6,7 @@ body {
 }
 
 .chooser {
-	background: yellow;
+	background: pink;
 	color: black;
 	display: inline-block;
 	padding: 4px;
@@ -37,8 +37,8 @@ box-shadow: 10px 10px 128px 41px rgba(235,155,235,1);
 	 -webkit-box-shadow: 10px 10px 128px 41px rgba(235,155,235,1);
 -moz-box-shadow: 10px 10px 128px 41px rgba(235,155,235,1);
 box-shadow: 10px 10px 128px 41px rgba(235,155,235,1);
- 
-	overflow: hidden;
+ height: 500px;
+	overflow: scroll;
 	display: inline-block;
   background: black;
   border-radius: 25px;
