--- a/scripts/style.css
+++ b/scripts/style.css
@@ -7,7 +7,7 @@ body {
 }
 
 .chooser {
-	background: pink;
+	background: #fff;
 	color: black;
 	display: inline-block;
 	padding: 4px;
@@ -83,8 +83,8 @@ button {
   color: white;
   position: relative;
   cursor: pointer;
-  width: 60px;
-  height: 60px;
+  width: 15px;
+  height: 15px;
   font-size: 12px;
   font-style: comic;
   -moz-border-radius: 60px;
