--- a/scripts/style.css
+++ b/scripts/style.css
@@ -163,6 +163,7 @@ box-shadow: 10px 10px 128px 41px rgba(235,155,235,1);
   font-size: 25px;
   border-radius: 45px;
   margin: 25px;
+  margin-bottom: 0px;
 }
 
 .keith{
