--- a/scripts/style.css
+++ b/scripts/style.css
@@ -108,6 +108,7 @@ button:hover {
   background-image: -o-linear-gradient(top, #3cfc6f, #e1ff00);
   background-image: linear-gradient(to bottom, #3cfc6f, #e1ff00);
   text-decoration: none;
+  color: black;
 }
 #chosen > div > button{
 	visibility: hidden;
