header display none

--- a/scripts/style.css
+++ b/scripts/style.css
@@ -2,13 +2,16 @@
 #levels {
   display: none;
 }
+header {
+  display: none;
+}
 
 body {
 	color: yellow;
 	background: black;
 	text-align: center;
   vertical-align: top;
-  
+
 }
 
 .chooser {
