--- a/scripts/style.css
+++ b/scripts/style.css
@@ -170,7 +170,7 @@ display: inline-block;
 text-align: center;
 }
 @media screen and (max-width: 1050px) {
-    #chooser {
+    #watchlist {
         width: 250px;
     }
     #chosen {
