--- a/scripts/style.css
+++ b/scripts/style.css
@@ -66,6 +66,7 @@ box-shadow: 10px 10px 128px 41px rgba(235,155,235,1);
 #chooserlistcontainer{
 	margin-left: auto;
   margin-right: auto;
+  display: none;
 	
 }
 
