--- a/scripts/style.css
+++ b/scripts/style.css
@@ -32,9 +32,8 @@ box-shadow: 10px 10px 128px 41px rgba(235,155,235,1);
 	width: 500px;
   background: black;
 height: 500px;
-  -webkit-box-shadow: 10px 10px 128px 41px rgba(235,155,235,1);
--moz-box-shadow: 10px 10px 128px 41px rgba(235,155,235,1);
-box-shadow: 10px 10px 128px 41px rgba(235,155,235,1);
+
+box-shadow: none;
  
     overflow: scroll;
     display: inline-block;
@@ -43,9 +42,8 @@ box-shadow: 10px 10px 128px 41px rgba(235,155,235,1);
 
 #chosen { 
 	width:500px;
-	 -webkit-box-shadow: 10px 10px 128px 41px rgba(235,155,235,1);
--moz-box-shadow: 10px 10px 128px 41px rgba(235,155,235,1);
-box-shadow: 10px 10px 128px 41px rgba(235,155,235,1);
+	 
+box-shadow: none;
  height: 500px;
 	overflow: scroll;
 	display: inline-block;
