green box shadow on highscore pics

--- a/scripts/style.css
+++ b/scripts/style.css
@@ -61,6 +61,9 @@ box-shadow: none;
 
 .spinning{
   border-radius: 50%;
+  -webkit-box-shadow: 10px 10px 164px -19px rgba(42,250,0,0.86);
+-moz-box-shadow: 10px 10px 164px -19px rgba(42,250,0,0.86);
+box-shadow: 10px 10px 164px -19px rgba(42,250,0,0.86);
 }
 
 #chooserlistcontainer{
