--- a/scripts/style.css
+++ b/scripts/style.css
@@ -141,7 +141,7 @@ box-shadow: 10px 10px 128px 41px rgba(235,155,235,1);
   margin-bottom: 0px;
 }
 hr { display: block; height: 1px;
-    border: 0; border-top: 3px solid #ff2d95;
+    border: 0; border-top: 2px solid pink;
     margin: 1em 0; padding: 0; }
 .keith{
   background: black;
